# libsubprocess

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  bootstrap.sh  configure.ac  configure.in  doxygen.ini  edg-se-lib-launcher.spec.in  libsubprocess.spec.in  versionGen.sh
src/: Makefile.am  config.h.in  config_local.h  edg_se_launcher.c  edg_se_ptrptr.c  main.c  ptrptr.c  ptrptr.h  subprocess.c  subprocess.h
